# python_demo_app

./: .pdm.toml  README.md  pyproject.toml
environments/: .env.development
src/: main.py
src/loader/: config.py  logger.py  mongo.py
src/loaders/: elastic_search.py  mongo.py
src/services/: elastic_services.py
